--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <input name="message" type="text" placeholder="Message">
         <button >send</button>
     </form>
+    <button id="sendLocation">send location</button>
     <ol id="messages">
 
     </ol>
