send messages to people in a room only

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <input type="text" name="name" autofocus>
             </div>
             <div class="form-field">
-                <label for="room"></label>
+                <label for="room">Room name</label>
                 <input type="text" name="room">
             </div>
             <div class="form-field">
